--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/Users/zw/Library/Application Support/NetBeans/7.3/gfv3-926034999.properties
+deploy.ant.properties.file=/Users/zw/Library/Application Support/NetBeans/7.3/tomcat70.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1
-j2ee.server.home=/Applications/NetBeans/glassfish-3.1.2.2/glassfish
-j2ee.server.instance=[/Applications/NetBeans/glassfish-3.1.2.2/glassfish:/Applications/NetBeans/glassfish-3.1.2.2/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.home=/Users/zw/tomcat7037
+j2ee.server.instance=tomcat70:home=/Users/zw/tomcat7037
 j2ee.server.middleware=/Applications/NetBeans/glassfish-3.1.2.2
 javac.debug=true
 javadoc.preview=true
