--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.commons-io-1.4.jar=web/WEB-INF/lib/commons-io-1.4.jar
 file.reference.commons-lang-2.3.jar=web/WEB-INF/lib/commons-lang-2.3.jar
 file.reference.commons-logging-1.1.1.jar=web/WEB-INF/lib/commons-logging-1.1.1.jar
 file.reference.druid-0.2.2.jar=web/WEB-INF/lib/druid-0.2.2.jar
+file.reference.ehcache-core-2.5.2.jar=web/WEB-INF/lib/ehcache-core-2.5.2.jar
 file.reference.fastjson-1.1.31.jar=web/WEB-INF/lib/fastjson-1.1.31.jar
 file.reference.guava-r07.jar=web/WEB-INF/lib/guava-r07.jar
 file.reference.json_simple-1.1.jar=web/WEB-INF/lib/json_simple-1.1.jar
@@ -41,19 +42,16 @@ file.reference.log4j-1.2.16.jar=web/WEB-INF/lib/log4j-1.2.16.jar
 file.reference.mysql-connector-java-5.1.6-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar
 file.reference.nutz-1.b.47-jdk6.jar=web/WEB-INF/lib/nutz-1.b.47-jdk6.jar
 file.reference.poi-3.0-FINAL.jar=web/WEB-INF/lib/poi-3.0-FINAL.jar
+file.reference.slf4j-api-1.6.1.jar=web/WEB-INF/lib/slf4j-api-1.6.1.jar
+file.reference.slf4j-jdk14-1.6.1.jar=web/WEB-INF/lib/slf4j-jdk14-1.6.1.jar
 file.reference.standard.jar=web/WEB-INF/lib/standard.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/javax.resource.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.jms.jar
-j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
-j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
-j2ee.platform.wsit.classpath=
-j2ee.server.type=gfv3ee6
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.2.1.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-util.jar
+j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-fileupload-1.2.1.jar}:\
@@ -61,6 +59,7 @@ javac.classpath=\
     ${file.reference.commons-lang-2.3.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.druid-0.2.2.jar}:\
+    ${file.reference.ehcache-core-2.5.2.jar}:\
     ${file.reference.fastjson-1.1.31.jar}:\
     ${file.reference.guava-r07.jar}:\
     ${file.reference.json_simple-1.1.jar}:\
@@ -71,7 +70,9 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
     ${file.reference.nutz-1.b.47-jdk6.jar}:\
     ${file.reference.poi-3.0-FINAL.jar}:\
-    ${file.reference.standard.jar}
+    ${file.reference.standard.jar}:\
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-jdk14-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -106,7 +107,7 @@ run.test.classpath=\
     ${build.test.classes.dir}
 # Space-separated list of JVM arguments used when running a class with a main method or a unit test
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
-runmain.jvmargs=
+runmain.jvmargs=-Xms50m
 source.encoding=UTF-8
 source.root=src
 src.dir=${source.root}/java
