moved src/main/java/com/ly/comm/ to v1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/main/java/com/ly/sys"]
 	path = src/main/java/com/ly/sys
 	url = https://git.oschina.net/dongfangx/SYS-JAVA-WEBSERVER-NUTZ.git
+[submodule "src/main/java/com/ly/comm"]
+	path = src/main/java/com/ly/comm
+	url = https://git.oschina.net/dongfangx/COMMON-WEBSERVER-NUTZ-JAVA.git
