moved src/main/webapp/WEB-INF/sys/ to v1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/main/java/com/ly/comm"]
 	path = src/main/java/com/ly/comm
 	url = https://git.oschina.net/dongfangx/COMMON-WEBSERVER-NUTZ-JAVA.git
+[submodule "src/main/webapp/WEB-INF/sys"]
+	path = src/main/webapp/WEB-INF/sys
+	url = https://git.oschina.net/dongfangx/SYS-HTML-WEBSERVER-JAVA.git
