--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/main/webapp/WEB-INF/sys"]
 	path = src/main/webapp/WEB-INF/sys
 	url = https://git.oschina.net/dongfangx/SYS-HTML-WEBSERVER-JAVA.git
+[submodule "src/main/webapp/sys"]
+	path = src/main/webapp/sys
+	url = https://git.oschina.net/dongfangx/SYS-RESOURCES-WEBSERVER-NUTZ-JAVA.git
