--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "src/main/webapp/sys"]
 	path = src/main/webapp/sys
 	url = https://git.oschina.net/dongfangx/SYS-RESOURCES-WEBSERVER-NUTZ-JAVA.git
+[submodule "src/main/webapp/BJUI"]
+	path = src/main/webapp/BJUI
+	url = https://git.oschina.net/xknaan/B-JUI.git
