--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <commons.version>3.3.2</commons.version>
         <supercsv.version>2.2.0</supercsv.version>
         <ehcache.version>2.9.1</ehcache.version>
+        <jsoup.version>1.8.2</jsoup.version>
 
     </properties>
 
@@ -86,6 +87,12 @@
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
             <version>${ehcache.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
         </dependency>
 
     </dependencies>
